# fra2mo-armando

./: CMakeLists.txt  IK_PICK_PLACE_GUIDE.md  README.md  missing_pkgs.txt
config/: arm_parameter.yaml  explore.yaml  fra2mo_controllers.yaml  mobile_base_parameter.yaml  navigation.yaml
fra2mo_armando/: CMakeLists.txt  README.md  package.xml
fra2mo_armando/config/: amcl.yaml  navigation.yaml
fra2mo_armando/launch/: fra2mo_amcl.launch.py  fra2mo_navigation.launch.py  fra2mo_slam.launch.py  gazebo_fra2mo.launch.py  ik_pick_place.launch.py  launch_world.launch.py
fra2mo_armando/maps/: mia_mappa.pgm  mia_mappa.yaml
fra2mo_armando/models/basket/: model.config
fra2mo_armando/models/box_magenta/: box_magenta.sdf  model.config
fra2mo_armando/models/cube_red/: cube_red.sdf
fra2mo_armando/models/cylinder_blue/: cylinder_blue.sdf
fra2mo_armando/models/cylinder_cyan/: model.config
fra2mo_armando/models/pedestal_1/: model.config  pedestal_1.sdf
fra2mo_armando/models/pedestal_3/: model.config
fra2mo_armando/models/pedestal_4/: model.config  pedestal_4.sdf
fra2mo_armando/models/pedestal_6/: model.config  pedestal_6.sdf
fra2mo_armando/models/sphere_green/: model.config
fra2mo_armando/rviz_conf/: fra2mo_conf.rviz
fra2mo_armando/scripts/: pick_place_demo.py  test_gripper.py
fra2mo_armando/src/: pick_place.cpp
fra2mo_armando/urdf/: armando_hardware_interface.xacro  armando_macro.xacro  fra2mo_base_macro.xacro  lidar_gazebo_macro.xacro
fra2mo_armando/worlds/: office_small.sdf
launch/: display_fra2mo.launch.py  fra2mo_amcl.launch.py  (+5 more)
urdf/: test.urdf  (+4 more)
(+16 files in other folders)
